Regress/DOTOP3.EXP
DOTOP3.ASO(17) : Error A2271: structure field expected
DOTOP3.ASO(18) : Error A2271: structure field expected
DOTOP3.ASO(19) : Error A2271: structure field expected
DOTOP3.ASO(20) : Error A2271: structure field expected
DOTOP3.ASO(21) : Error A2170: Invalid use of register
DOTOP3.ASO(22) : Error A2271: structure field expected
DOTOP3.ASO(32) : Error A2209: Syntax error: f2
DOTOP3.ASO(35) : Error A2063: Symbol not defined : S2.S21
DOTOP3.ASO(36) : Error A2063: Symbol not defined : S2.S21
